# ACTION-Module

./: .gitignore  README.md
CCD/: README.md
CCD/HARDWARE/CCD/: ccd.c  ccd.h
CCD/HARDWARE/LED/: led.c  led.h
CCD/HARDWARE/TIMER/: timer.c
CCD/USER/: ADC.uvguix_supeng819.bak  ADC.uvprojx  ADC_uvoptx.bak  ADC_uvprojx.bak  JLinkLog.txt  main.c
OneNET/: README.md  main.c  sim800c.c  sim800c.h
Product-recognition/: README.md  jdx_18_1217.py
Product-recognition/D435Cameara/: CMakeLists.txt  main.cpp
Product-recognition/D435Cameara/src/: filedeal.cpp  filedeal.h
flying-disc/: 7-22.Config  CMakeLists.txt  README.md  car_para.Config  disc_para.Config  modifypos.Config
flying-disc/src/: SerialPort.cpp  SerialPort.h  camera.Config  debug.h  main.cpp  recognition.cpp  recognition.h
heart-rate-detection/: README.md
